tests/semantic_cases/invalid/typed_param_self_shadows_type_alias.ob0
MODULE Main;
TYPE Count = INTEGER;
PROCEDURE P(Count: Count);
BEGIN
  WriteInt(Count)
END P;
BEGIN
END Main.
